Complete handler.